--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SegProject2019</string>
+
+    <string name="password">Password</string>
+    <string name="username">Username</string>
+    <string name="login">Login</string>
+    <string name="not_registered">Not registered?</string>
+    <string name="Register">Register</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="already_registered">Already registered?</string>
+
 </resources>
